# zero2prod

./: Cargo.toml  README.md  configuration.yaml
.github/workflows/: rust.yml
.run/: init_db.sh.run.xml
migrations/: 20230513182822_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
